--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>{{ page.title }} &larr; {{ page.top }}</title>
+   <title>{{ page.title }}  {{ page.top }}</title>
    <meta name="author" content="{{ site.author.name }}" />
 
    <link rel="start" href="{{ HOME_PATH }}" />
@@ -33,14 +33,15 @@
   <div id="header">
     <h1>
     	<a href="{{ HOME_PATH }}" title="{{ site.title }}">{{ site.title }}</a>
-    	<span class="byline">&larr; <a href="{{ HOME_PATH }}">{{ site.author.name }}</a></span>
+    	<!-- <span class="byline">&larr; <a href="{{ HOME_PATH }}">{{ site.author.name }}</a></span> -->
     </h1>
     <ul class="nav">
       <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
-      <li><a  href="/archive.html">Archive</a></li>
+      <li><a class="academic" href="/academic.html">Academic</a></li>
+     <!--  <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
-      <li><a  href="/tags.html">Tags</a></li>
+      <li><a  href="/tags.html">Tags</a></li> -->
     </ul>
   </div>
 
