--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -37,8 +37,8 @@
     </h1>
     <ul class="nav">
       <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
-      <li><a class="academic" href="/academic.html">Academic</a></li>
-      <li><a class="contest" href="/contest.html">Contest</a></li>
+      <li><a class="academic" href="/academic.html">Research</a></li>
+      <li><a class="contest" href="/contest.html">Awards</a></li>
      <!--  <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
