--- a/assets/themes/mark-reid/css/screen.css
+++ b/assets/themes/mark-reid/css/screen.css
@@ -125,6 +125,9 @@ sup { line-height: 1ex; }
 	font-size: 0.875em;
 	line-height: 1.714em;
 }
+.zdh{
+	font-size: 0.875em;
+}
 blockquote {
 	padding: 0 2.8em;
 	margin: 1.714em 0;
