--- a/_includes/themes/mark-reid/default.html
+++ b/_includes/themes/mark-reid/default.html
@@ -37,8 +37,10 @@
     </h1>
     <ul class="nav">
       <li><a class="home" href="{{ HOME_PATH }}">Home</a></li>
-      <li><a class="academic" href="/academic.html">Research</a></li>
+      <li><a class="academic" href="/publication.html">Publication</a></li>
+      <li><a class="project" href="/project.html">Project</a></li>
       <li><a class="contest" href="/contest.html">Awards</a></li>
+      <li><a class="cv" href="/docs/cv_zhangdenghui.pdf">CV</a></li>
      <!--  <li><a  href="/archive.html">Archive</a></li>
       <li><a  href="/pages.html">Pages</a></li>
       <li><a  href="/categories.html">Categories</a></li>
